docs/img/gateway-api.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: stunner
spec:
  controllerName: l7mp.io/stunner/gateway
  description: "STUNner WebRTC gateway"
  parametersRef:
    kind: ConfigMap
    group: ""
    name: stunner-global-config
---

kind: Gateway
metadata:
  name: webrtc-gateway
  namespace: stunner
spec:
  gatewayClassName: stunner
  listeners:
  - name: udp
    protocol: UDP
    port: 3478
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            app: stunner
  - name: tcp
    protocol: TCP
    port: 3478
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            app: stunner
